- more work on function calling - more work on implentation of phi functions - code polishing

--- a/trunk/TODO
+++ b/trunk/TODO
@@ -3,5 +3,4 @@
 - getters and setters + private use and better capsulation
 - better syntax handling
 - Param handling
-- memberVar handling
-- better constant concept for Operator kinds
+- make bool a int64 var
